--- a/index.html
+++ b/index.html
@@ -245,28 +245,27 @@
                             <textarea class="tInput">Your Message</textarea>
                         </div>
                         <input class="submitBtn" type="submit" value="SENED MESSAGE">
-                        
-
-
-
-
-
-
                     </form>
-
-                 </div>
+                  </div>
                </div>
 
 <!--****************************************** sixth Section end  **********************************-->
 <!--******************************************  seventh Section start  *****************************-->
-               <div class="seventhtSec">
-
-
-
-
-
-
-
+             <div class="section seventhtSec ">
+                <div class="container">
+                     <div class="footerSec">
+                            <ul>
+                              <li><a href=##"">Facebook</a></li>
+                              <li><a href=##"">Twitter</a></li>
+                              <li><a href=##"">Google +</a></li>
+                              <li><a href=##"">LinkedIn</a></li>
+                              <li><a href=##"">Behance</a></li>
+                               <li><a href=##"">Dribble</a></li>
+                              <li><a href=##"">GitHub</a></li>
+                            </ul>
+                     </div>
+                     <div clear="clear"></div>
+                   </div>
              </div>
 <!--****************************************** seventh Section end  **********************************-->
       </body>
