edit names of main classes
make the names of classes related to its content

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="css/style.css" type="text/css">
   </head>
   <body>
-<!--**************************************   first section start  ************************************************************  -->
-           <div class="section firstSec">
+<!--**************************************   hero section start  ************************************************************  -->
+           <div class="section heroSec">
                 <div class="container">
                       <nav>
                           <div class="logo">
@@ -30,9 +30,9 @@
                         <a class="link" href="##">work whith us!</a>
                   </div>
             </div>
-<!--**************************************   first section end    ************************************************************  -->
-<!--**************************************   second Section start   ************************************************************  -->
-            <div class="section secondSec">
+<!--**************************************   hero section end    ************************************************************  -->
+<!--**************************************   services Section start   ************************************************************  -->
+            <div class="section servicesSec">
                 <div class="container">
                       <h2>Services We Provide</h2>
                       <p class="servicesDesc">We are working with both individuals and businesses from all over the globe<br> to create awesome websites and applications
@@ -74,9 +74,9 @@
                   </div>
                   <div class="clear"></div>
                  </div>
-<!--**************************************** second Section end  ************************************************************  -->
-<!--**************************************** third Section start  ***********************************************************  -->
-            <div class="section thirdSec">
+<!--**************************************** services Section end  ************************************************************  -->
+<!--**************************************** team Section start  ***********************************************************  -->
+            <div class="section teamSec">
                    <div class="container">
                      <h2>Services We Provide</h2>
                      <p>We are working with both individuals and businesses from all over the globe<br> to create awesome websites and applications
@@ -140,9 +140,9 @@
                         </div>
                   </div>
              </div>
-<!--**************************************** third Section end  ************************************************************  -->
-<!--**************************************** fourth Section start************************************************************  -->
-             <div class="section fourthSec">
+<!--**************************************** team Section end  ************************************************************  -->
+<!--**************************************** portofolio Section start************************************************************  -->
+             <div class="section portofolioSec">
                       <div class="container">
                         <h2>Services We Provide</h2>
                         <p>We are working with both individuals and businesses from all over the globe<br> to create awesome websites and applications
@@ -170,9 +170,9 @@
                       </div>
                   </div>
 
-  <!--****************************************** fourth Section end   ******************************-->
-  <!--****************************************** fifth Section start   ***************************-->
-                   <div class="section fifthSec">
+  <!--****************************************** portofolio Section end   ******************************-->
+  <!--****************************************** opinions Section start   ***************************-->
+                   <div class="section opinionsSec">
                          <div class="container">
                            <h2>WHAT PEOPLE SAY ABOUT US</h2>
                            <p>our clients love us! </p>
@@ -224,9 +224,9 @@
                             </div>
                          </div>
                 </div>
-<!--*****************************************   fifth Section end   ****************************** -->
-<!--*****************************************  sixth Section start ******************************* -->
-               <div class="section sixthtSec">
+<!--*****************************************   opinions Section end   ****************************** -->
+<!--*****************************************  form Section start ******************************* -->
+               <div class="section formtSec">
                    <div class="container">
                      <h2 >GET IN TOUCH</h2>
                      <P>We are working with both individuals and businesses from all other the globe to creat awesome websites </P>
@@ -249,9 +249,9 @@
                   </div>
                </div>
 
-<!--****************************************** sixth Section end  **********************************-->
-<!--******************************************  seventh Section start  *****************************-->
-             <div class="section seventhtSec ">
+<!--****************************************** formt Section end  **********************************-->
+<!--******************************************  footer Section start  *****************************-->
+             <div class="section footSec ">
                 <div class="container">
                      <div class="footerSec">
                             <ul>
@@ -267,6 +267,6 @@
                      <div clear="clear"></div>
                    </div>
              </div>
-<!--****************************************** seventh Section end  **********************************-->
+<!--****************************************** footer Section end  **********************************-->
       </body>
 </html>
