--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <!--**************************************** team Section start  ***********************************************************  -->
             <div class="section teamSec">
                    <div class="container">
-                     <h2>Services We Provide</h2>
+                     <h2>meet our beautiful team</h2>
                      <p>We are working with both individuals and businesses from all over the globe<br> to create awesome websites and applications
                      </p>
                      <div class="row">
@@ -144,25 +144,25 @@
 <!--**************************************** portofolio Section start************************************************************  -->
              <div class="section portofolioSec">
                       <div class="container">
-                        <h2>Services We Provide</h2>
+                        <h2>our portofolio</h2>
                         <p>We are working with both individuals and businesses from all over the globe<br> to create awesome websites and applications
                         </p>
                         <div class="fourDivs">
                             <div class="divs">
                                  <img   src="images/lab-1.png">
-                                 <span class="span">jnbsj bhs</span>
+                                 <span class="span">ISOMETRIC PERSPECTIVE MOKE-UP</span>
                             </div>
                             <div class="divs">
                                   <img  src="images/lab-2.png">
-                                  <span class="span">jnbsj bhs</span>
+                                  <span class="span">TIME ZONE APP UI</span>
                             </div>
                             <div class="divs">
                                    <img  src="images/lab-3.png">
-                                   <span class="span">jnbsj bhs</span>
+                                   <span class="span">VIRO MEDIA PLAYERS</span>
                             </div>
                             <div class="divs">
                                     <img  src="images/lab-4.png">
-                                    <span class="span">jnbsj bhs</span>
+                                    <span class="span">BIOG/MAGAZINE FLAT UI KIT</span>
                             </div>
                             </div>
                             <div class="clear"></div>
